--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1259,3 +1259,34 @@
 
 }
 
+@media (min-width: 990px) {
+	html:lang(de), html:lang(el){
+		.page-media-centre-events{
+			#edit-search-api-views-fulltext {
+			    width: 250px !important;
+			}
+		}
+		.page-events .region-content #block-system-main .views-exposed-widgets select {
+    		width: 200px!important;
+		}
+
+		.page-events .region-content #block-system-main .views-exposed-widgets #edit_years_chosen {
+		    width: 150px!important;
+		}
+	}
+
+	html:lang(fr), html:lang(pt){
+		.page-media-centre-events{
+			#edit-search-api-views-fulltext {
+			    width: 270px !important;
+			}
+		}
+		.page-events .region-content #block-system-main .views-exposed-widgets select {
+    		width: 180px!important;
+		}
+
+		.page-events .region-content #block-system-main .views-exposed-widgets #edit_years_chosen {
+		    width: 130px!important;
+		}
+	}
+}
