--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9550,3 +9550,22 @@ body.front-page{
 }
 
 /* END MHWC-39 - For UX next step */
+
+.block-hwc-partner{
+	.breadcrumb{
+		span{
+			a{
+				background: url(../images/pag-back.png) no-repeat 1px 4px;
+			    color: #003399;
+			    margin-left: 0;
+			    font-weight: bold;
+			    text-decoration: none !important;
+			    padding-left: 1.2em;
+
+    			&:hover{
+    				text-decoration: underline !important;
+    			}
+			}
+		}
+	}
+}
