HW20-840 - Private Zone: Partners should be able to go back to the private zone always

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9569,3 +9569,59 @@ body.front-page{
 		}
 	}
 }
+
+.page-private.private-area{
+	.section-introduction{
+		.node-private-aria-article{
+			.content{
+				margin-top: 1em;
+				.field-name-body{
+					width: 66%;
+	    			margin: 0 auto;
+	    			padding-bottom: 0em;
+	    			p{
+	    				padding-top: 0 !important;
+	    			}
+	    			ul{
+	    				padding-bottom: 2em !important;
+	    			}
+				}
+			}
+		}
+	}	
+}
+
+.page-private.private-area{
+	.content{
+		margin-top: 1em;
+	}
+}
+
+.page-partners-documents {
+	.region.region-content {
+		.view-documents {
+			.view-content {
+				.views-row {
+					.views-field-field-document-files {
+						ul {
+							li {
+								.entity-field-collection-item {
+									.publication-teaser{ 
+										.publication-download-label{
+											margin-right: 0;
+										}
+										ul{
+
+											padding-left: 0; 
+										}
+									}
+								}
+							}
+						}
+
+	    			}
+				}
+			}
+		}
+	}	
+}
