HW20-849 - Tablet (vertical) Practical tools list: See more button is displayed on the right

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8969,6 +8969,11 @@ body.front-page .footer {
     position: relative;
     top: -6px;
   }
+  .page-tools-and-publications-practical-tools.page-search .main-container #block-system-main .view .views-row .more-link {
+    bottom: 15px;
+    right: auto;
+    left: 15px;
+  }
   /* Panels - National Focal Points, etc. */
   .panels-flexible-column-inside-first .profile-col-left-middle-2 {
     width: 100%;
