--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -522,7 +522,7 @@
 					.views-row{
 						.more-link{
 							bottom: 10px;
-					    right: 0;
+					    	right: 0;
 						}
 					}
 				}
@@ -535,6 +535,21 @@
 		}
 	}
 
+	.page-tools-and-publications-practical-tools.page-search{
+		.main-container{
+			#block-system-main{
+				.view{
+					.views-row{
+						.more-link{
+							bottom: 15px;
+					    	right: auto;
+					    	left: 15px;
+						}
+					}
+				}
+			}
+		}
+	}
 
 	/* Panels - National Focal Points, etc. */
 	.panels-flexible-column-inside-first .profile-col-left-middle-2{
