--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -89,7 +89,20 @@
 				background-size: contain;
 			}
 		}
+	}
 
+	body.front-page{
+		.main-container{
+			#block-hwc-homepage-hwc-homepage-topics{
+				.priority_area{
+					ul{
+					    li:nth-child(4){
+					    	margin-right: 2em;
+					    }
+					}
+				}
+			}
+		}
 	}
 
 	/*Slider Publications*/
