HW20-840 - Private Zone: Partners should be able to go back to the private zone always

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9625,3 +9625,12 @@ body.front-page{
 		}
 	}	
 }
+
+/* PZ - Update your profile */
+body.page-node-253{
+	#block-hwc-partner-hwc-partner-back-to-private-zone{
+		.breadcrumb{
+			padding: 0px 1em 1.5em 0.8em;
+		}
+	}
+}
