--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -8257,6 +8257,10 @@ body.front-page .footer {
 .page-partners-documents .region.region-content .view-documents .view-content .views-row .views-field-field-document-files ul li .entity-field-collection-item .publication-teaser ul {
   padding-left: 0;
 }
+/* PZ - Update your profile */
+body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcrumb {
+  padding: 0px 1em 1.5em 0.8em;
+}
 .isMobile {
   float: right !important;
 }
