--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1333,7 +1333,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	.social-media{
 		padding-left: 2em;
       	h3{
-			color: white;
+			color: #FFFFFF;
 			margin-top: 0;
 			margin-bottom: 20px;
 			font-weight: 400;
@@ -1341,6 +1341,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 	      	span{
 				padding-right: 0.7em;
 				padding-left: 5px;
+				a{
+					color: #FFFFFF;
+				}
 	  		}
   		}
   	}
