--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9637,3 +9637,14 @@ body.page-node-253{
 		}
 	}
 }
+
+.content-pdf-guide{
+	float: right;
+	margin-top: -25px;
+	a{
+		background: url(../images/download-timeline.png) no-repeat 100% 3px;
+	    color: #003399;
+	    padding-right: 1.5em;
+	    font-weight: bold;
+	}
+}
