--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,5 +1,20 @@
 @media (max-width: 992px) {
 
+	body.front-page{
+		.main-container{
+			#block-views-homepage-banners-block{
+				.view-homepage-banners {
+					.view-content{
+						flex-direction: column;
+						> div:nth-child(3){
+							order: 4;
+						}
+					}
+				}
+			}
+		}
+	}
+
 	header.navbar-default{
 		&.sticky-menu{
 			.campaigns-header{
