HW20-865 - Mobile Practical tools list: See more is on the right

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -30,7 +30,7 @@
 					.views-field-body{
 						padding-bottom: 0;
 						.more-link {
-						    right: 15px !important;						  
+						    bottom: 10px!important;	 				  
 						}
 					}
 				}
