--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1257,15 +1257,14 @@
 				}
 			}
 		}
-	}
 
-	.content-languages-download{
-		width: 100%;
-		select.new-select-style{
-			height: 34px;
+		.content-languages-download{
+			width: 100%;
+			select.new-select-style{
+				height: 34px;
+			}
 		}
 	}
-
 }
 
 
@@ -1273,6 +1272,7 @@
 
 
 @media (max-width: 600px){
+
 	.before-the-campaign .content-box-before .two-box-column{
 		flex-direction: column;
 		margin-bottom: 0;
@@ -1297,7 +1297,7 @@
 
 
 @media (max-width: 669px) {
-	
+
 	/* Private Zone */
 	.profile-edit-links-container{
 		.panels-flexible-region-inside-first{
@@ -1311,5 +1311,12 @@
 			margin: 1em 3em 0.5em 0;
 		}
 	}
+}
 
+@media (max-width: 700px) {
+	body.page-tools-and-publications-practical-tools {
+		.region.region-content .view-content .views-row .views-field-body{
+			padding-bottom: 130px;
+		}
+	}
 }
