--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -10481,10 +10481,10 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   body.page-tools-and-publications-practical-tools .view-practical-tools .view-filters .form-select {
     max-height: 62px;
   }
-  .content-languages-download {
+  body.page-tools-and-publications-practical-tools .content-languages-download {
     width: 100%;
   }
-  .content-languages-download select.new-select-style {
+  body.page-tools-and-publications-practical-tools .content-languages-download select.new-select-style {
     height: 34px;
   }
 }
@@ -10521,6 +10521,11 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     margin: 1em 3em 0.5em 0;
   }
 }
+@media (max-width: 700px) {
+  body.page-tools-and-publications-practical-tools .region.region-content .view-content .views-row .views-field-body {
+    padding-bottom: 130px;
+  }
+}
 @media (max-width: 480px) {
   .page_title {
     margin-bottom: 1em;
@@ -10539,7 +10544,7 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     padding-bottom: 0;
   }
   body.page-tools-and-publications-practical-tools .region.region-content .view-content .views-row .views-field-body .more-link {
-    right: 15px !important;
+    bottom: 10px!important;
   }
   body.page-tools-and-publications-practical-tools .region.region-content .view-practical-tools .view-content .views-row .conten-tags {
     width: 100%;
