--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4549,10 +4549,30 @@ html:lang(de){
 	}
 }
 
-html:lang(de){
+html:lang(bg), 
+html:lang(cs), 
+html:lang(et), 
+html:lang(el), 
+html:lang(de), 
+html:lang(es),
+html:lang(fr), 
+html:lang(hr), 
+html:lang(is), 
+html:lang(lv), 
+html:lang(lt), 
+html:lang(hu), 
+html:lang(nl), 
+html:lang(pl),
+html:lang(pt),
+html:lang(ro),
+html:lang(sk),
+html:lang(sl),
+html:lang(fi),
+html:lang(sv)
+{
 	.how-to-apply{
 		.box{
-			width: 267px;
+			width: 269px;
 		}
 
 		> div.boxes > div:nth-child(1){
