--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -898,19 +898,19 @@
 
 		> div.boxes > div:nth-child(1){
 			position: absolute;
-	    	left: 72px;
+	    	left: 72px !important;
 	    	top: 68px;
 		}
 
 		> div.boxes > div:nth-child(2){
 			position: absolute;
-			left: 72px;
+			left: 72px !important;
     		top: 310px;
 		}
 
 		> div.boxes > div:nth-child(3){
 			position: absolute;
-    		left: 71px;
+    		left: 71px !important;
     		top: 546px;
 		}
 	}
