--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2161,8 +2161,9 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 
 .content-languages-download{
+	width: 100%;
     color:#003399;
-    padding: 1em;
+    padding: 0.6em;
     background:#daea96;
     float: left;
     border-radius: 5px;
@@ -2188,7 +2189,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 
 
-html:lang(de){
+html:lang(de), html:lang(mt){
 	.content-languages-download{
 		 label{
 		 	font-size: 0.8em;
