--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -454,6 +454,25 @@
 
 @media (max-width: 1280px) {
 
+
+	html:lang(de),
+	html:lang(el),
+	html:lang(es),
+	html:lang(fr),
+	html:lang(hu),
+	html:lang(pl),
+	html:lang(pt),
+	html:lang(ro)
+	{
+		.intro-splash-20{
+			.views-row-first{
+				h1{
+					font-size: 2.3em;
+				}
+			}
+		}
+	}
+
 	/* Events */
 	.page-events{
 		.region-content{
