--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -457,6 +457,26 @@ select{
 	}
 }
 
+html:lang(de),
+html:lang(el),
+html:lang(es),
+html:lang(fr),
+html:lang(hu),
+html:lang(pl),
+html:lang(pt),
+html:lang(ro)
+{
+	.intro-splash-20{
+		h2{
+			font-size: 1.8em;
+		}
+		.views-row-first > p:nth-child(3){
+			max-width: 525px;
+		}
+	}
+}
+
+
 
 /* Coming Soon */
 
