--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8671,7 +8671,7 @@ body.rel1{
 	padding-top: 0!important;
 }
 
-html:lang(es){
+html:lang(es), html:lang(mt){
 	body.rel1 header.navbar-default .campaigns-header .navbar-header .header-text {
 	    max-width: 368px !important;
 	}
