--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5124,10 +5124,6 @@ span.add-to-my-calendar{
 				display: list-item;
 				margin-left: 2em;
 			}
-
-			.field-type-image{
-				display: none;
-			}
 		}
 
 		.field-name-field-organizer{
@@ -5201,6 +5197,18 @@ span.add-to-my-calendar{
 			margin-top: -10px;
     		clear: both;
     		margin-bottom: 20px;
+    		width: 100%;
+		    display: flex;
+		    justify-content: center;
+		    background: none;
+		    label{
+		    	background: url(../images/green-calendar.png) no-repeat 0 1px;
+		    	padding-left: 1.5em;
+		    }
+	 	}
+
+	 	.hwc-share-widget{
+	 		clear: both;
 	 	}
 
 	 	.field-name-field-start-date{
